@@ -1,3 +1,13 @@
+Thu Jan 15 14:54:01 2004  Tim Janik  <timj@gtk.org>
+
+	* gslwavechunk.c: in fill_block() step through the sample with a step
+	width of 1 instead of n_channels, since n_channels wide stepping is
+	performed later on through dirstride values > 1. fixes "clicks" at
+	the start/end of unlooped stereo samples (and looped stereo samples).
+
+	* gslwaveosc.[hc]: 
+	* gslwaveosc-aux.c: support channel selection offset in config struct.
+
 Sun Jan 11 06:18:05 2004  Tim Janik  <timj@gtk.org>
 
 	* bsestorage.c (parse_raw_data_handle): properly setup return values,
